# comfyui-image-scorer

./: .gitignore  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  MECHANICS.md  PROJECT_STRUCTURE.md  README.md  SESSION_SUMMARY.md  __init__.py  config.json  copilot-instructions.md  deploy.py  image_vector_size.json  plan-improveImageRankingSystem.prompt.prompt.md  prepare_config.json  pyproject.toml  pyrightconfig.json  requirements.txt  test_deploy.py  test_parameter_analysis.ipynb  test_runner.py  text_index.json  training_config.json  untitled-plan-imageScorer.prompt.md
.github/: copilot-instructions.md
.github/workflows/: check-deps.yml
.scripts/: check_training_import.py  exec_cells.py  replicate_cell2.py  run_hpo.py  run_hpo_headless.py
comfyui_custom_nodes/ComfyUI-Image-Scorer/: README.md  __init__.py  nodes.py  prepare_config.json  requirements.txt  scorer.py
config/: config.json  image_vector_size.json  prepare_config.json  ranking_config.json  training_config.json  vector_config.json
external_modules/analysis/: __init__.py  endpoints.py  helpers.py
external_modules/comparison/: __init__.py  endpoints.py
external_modules/gallery/: __init__.py  (+1 more)
ranking/: score_server.py  scores.py  utils.py
shared/: config.py  feature_assembler.py  helpers.py  image_analysis.py  io.py  logger.py  matrix_analysis.py  paths.py  tasks.py  utils.py
step01ranking/: cache.py  client.js  index.html  score_server.py  scores.py  style.css  utils.py
step04export/: deploy.py
tests/: test_text_parsing.py
text_data/: text_processing.py
(+408 files in other folders)
